--- a/index.html
+++ b/index.html
@@ -53,21 +53,25 @@
             <div class="heading">
               <h1 class="display-3 text-center text-md-start">
                 Welcome to <span class="text-white">Propl. </span> <br>
-                Empowering careers, connecting the talents
+                Empowering careers, connecting talents
+
               </h1>
               <!-- Text -->
               <p class="lead text-center text-md-start  mb-6 mb-lg-8">
-                Virtual work experience that makes recruitment process engaging and effective
+                Virtual work experience that makes the recruitment process engaging, effective and inclusive.
+
               </p>
             </div>
 
             <!-- Buttons -->
             <div class="buttons text-center text-md-start">
-              <a href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl" class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
-              Employers Sign Up Now
+              <a href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl"
+                class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
+                Employers Sign Up Now
               </a>
               <a href="https://share.proto.io/YEUHOV/" class="btn btn-secondary shadow lift me-1">
-                <i class="fa-solid fa-user-plus"></i> Candidates click here
+                <i class="fa-solid fa-user-plus"></i> Candidates Click Here
+
               </a>
             </div>
           </div>
@@ -97,9 +101,10 @@
                   alt="A person interviewing another person, both are sitting at a desk, with a notebook and pen on the table">
               </div>
               <div class="desc">
-                <h3>Define</h3>
-                <p>Define a job simulation that fits the role you are recruiting for, or choose existing examples from
-                  our library</p>
+                <h3 class="fw-bold">Define</h3>
+                <p>Define a virtual work experience that fits the role you are recruiting for, or choose existing
+                  examples from our library</p>
+
               </div>
             </div>
 
@@ -109,8 +114,8 @@
                   alt="A person interviewing another person, both are sitting at a desk, with a notebook and pen on the table">
               </div>
               <div class="desc">
-                <h3>Publish</h3>
-                <p>Publish simulations as a part of your employer branding and recruitment</p>
+                <h3 class="fw-bold">Publish</h3>
+                <p>Publish virtual work experience as a part of your employer branding and recruitment</p>
               </div>
             </div>
 
@@ -119,10 +124,10 @@
                 <img class="fixed-size-img" src="./assets/img/evaluate.png" alt="Image">
               </div>
               <div class="desc">
-                <h3>Evaluate</h3>
-                <p>Evaluate candidate’s performance through simulations or search for candidates that match your hiring
-                  requirements in our
-                  database</p>
+                <h3 class="fw-bold">Evaluate</h3>
+                <p>Receive results from virtual work experience and find potential job candidates that match your
+                  requirements</p>
+
               </div>
             </div>
 
@@ -130,63 +135,43 @@
         </div>
       </div>
     </section>
-    <!-- Our customers section  logos-->
-    <section class="customers-logos">
-      <div class="container">
-        <div class="rom info-1">
-          <!-- Text -->
-          <div class="col-md-6">
-            <div class="text-information">
-              <h3>Our customers</h3>
 
-            </div>
-          </div>
-          <!-- Images -->
-          <div class="row align-items-start img-logo">
-            <div class="col">
-              <img class="fixed-size-img" src="./assets/img/startup-norway.png" alt="logo">
-            </div>
-            <div class="col">
-              <img class="fixed-size-img" src="./assets/img/energy.png" alt="logo">
-            </div>
-            <div class="col">
-              <img class="fixed-size-img" src="./assets/img/againx-logo.png" alt="logo">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--How we help -->
     <Section class="we-help-text">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
             <div class="card-b">
-              <h5 class="align-items-center mb-5"> 1. Save time </h5>
-              <p> As a hiring manager, you will be able receive profiles of candidates who have
-                performed job simulations with an overview
-                of their skills and knowledge. This can be integrated into your ATS to help you select the best
-                candidates for your next
-                hiring process.</p>
-              <a href="#" class="btn btn-primary">View here</a>
+              <h5 class="align-items-center mb-5 fw-bold"> 1. Find the most motivated candidates</h5>
+
+              <p> You will be able to receive profiles of candidates who have performed your virtual work experience and
+                showed interests
+                in your company.</p>
+
+              <!-- <a href="#" class="btn btn-primary">Read more</a> -->
             </div>
           </div>
 
           <div class="col-md-4 ">
             <div class="card-b">
-              <h5 class="align-items-center mb-5"> 2. Access to candidate pool </h5>
-              <p> Job simulations are available all year round, which helps attract candidates that may not be actively
-                looking for a new
-                job, but are considering a career change.</p>
-              <a href="#" class="btn btn-primary">View here</a>
+              <h5 class="align-items-center flex-medull  mb-2 fw-bold"> 2. Access to a more diverse candidate pool</h5>
+
+              <p>The virtual work experience is available all year round, which helps attract candidates that may not be
+                actively looking
+                for a new job, but are considering a career change.</p>
+              <!-- <a href="#" class="btn btn-primary">Read more</a> -->
             </div>
           </div>
 
           <div class="col-md-4 ">
             <div class="card-b">
-              <h5 class="align-items-center mb-5">3. Strengthen employer branding </h5>
-              <p>Promote your employer branding with an innovative recruitment process and stand out from the crowd.</p>
-              <a href="#" class="btn btn-primary">View here </a>
+              <h5 class="align-items-center mb-5 fw-bold">3. Strengthen employer branding</h5>
+
+              <p class="flex-shrink-1">Stand out from the crowd and attract the best talents. Our virtual work
+                experience promotes you as an
+                innovative
+                employer with a strong focus on diversity, equity and inclusion.</p>
+
+              <!-- <a href="#" class="btn btn-primary">Read more</a> -->
             </div>
           </div>
         </div>
@@ -200,12 +185,12 @@
           <!-- Text -->
           <div class="col-md-6">
             <div class="text-information-2">
-              <h3>Our supporters</h3>
+              <h3 class="fw-bold">Our supporters</h3>
 
             </div>
           </div>
           <!-- Images -->
-          <div class="row align-items-start img-logo">
+          <div class="row align-items-start img-logo" id="current-background">
             <div class="col">
               <img class="fixed-size-img" src="./assets/img/charge_positive.png" alt="logo">
             </div>
@@ -216,9 +201,24 @@
               <img class="fixed-size-img" src="./assets/img/founder-institute1.png" alt="logo">
             </div>
           </div>
+
         </div>
+
+        <!-- <button class="btn btn-primary newsletter-btn">Subscribe to our Newsletter</button> -->
+
       </div>
     </section>
+    <video controls width="650">
+      <source src="/assets/img/video-wrapper.mp4" type="video/mp4" />
+      <source src="/assets/img/video-wrapper.webm" type="video/webm" />
+      <p>Your browser does not support HTML5 video. </p>
+    </video>
+
+    <div class="div">
+
+      <a href="#" class="btn btn-primary subscribe-btn">Sign Up Now </a>
+    </div>
+
   </main>
 
   <!-- Footer section -->
@@ -226,15 +226,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md mb-4 mb-md-0">
-          <h3>Our visit location is:</h3>
+          <h3 class="fw-bold">Our address:</h3>
+
           <ul class="list-unstyled nav-links">
-            <li><a href="#">Propl AS
+            <li><a href="#" class="fw-bold">Propl AS
                 Gründergarasjen, OsloMet Pilestredet 52, 0167 Oslo</a></li>
 
           </ul>
         </div>
         <div class="col-md mb-4 mb-md-0">
-          <h3>About</h3>
+          <h3 class="fw-bold">About</h3>
           <ul class="list-unstyled nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
@@ -242,7 +243,7 @@
           </ul>
         </div>
         <div class="col-md mb-4 mb-md-0">
-          <h3>if you have any further questions, please Contact</h3>
+          <h3>For questions or inquiries, please contact</h3>
           <ul class="list-unstyled nav-links">
             <li><a href="#">hello@propl.net</a></li>
 
@@ -251,19 +252,23 @@
         <div class="col-md mb-4 mb-md-0">
           <h3>Legal</h3>
           <ul class="list-unstyled nav-links">
-            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Legality</a></li>
-            <li><a href="#">Author License</a></li>
+
           </ul>
         </div>
+
         <div class="col-md-4 mb-4 mb-md-0">
-          <h3>Subscribe to our newsletter</h3>
-          <p class="mb-4">Monthly digest of what's new and exciting from us.</p>
-          <form action="#" class="subscribe">
-            <input type="text" class="form-control" placeholder="Enter your e-mail">
-            <input type="submit" class="btn btn-submit" value="Send">
+          <div class="intro">
+            <h2 class="text-center newsletter">Subscribe to our Newsletter</h2>
+            <p class="text-center">Monthly digest of what's new and exciting from us. </p>
+          </div>
+          <form class="form-inline" method="post">
+            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email">
+            </div>
+            <div class="form-group"><button class="btn btn-primary" type="button">Subscribe </button></div>
           </form>
+
         </div>
       </div>
       <div class="row align-items-center">
@@ -271,18 +276,31 @@
           <div class="border-top my-5"></div>
         </div>
         <div class="col-md-6">
-          <p><small> © 2019 All Rights Reserved.</small></p>
+          <p><small> © 2023 All Rights Reserved.</small></p>
         </div>
         <div class="col-md-6 text-md-right">
           <ul class="social list-unstyled">
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://www.facebook.com/propl.global"><i class="fa-brands fa-facebook"></i></a></li>
+
+            <li><a href="https://www.instagram.com/propl_global/"><i class="fa-brands fa-instagram"></i></a></li>
+
+            <li><a href="https://www.linkedin.com/company/propl-global/"><i class="fa-brands fa-linkedin"></i></a></li>
+
           </ul>
         </div>
       </div>
     </div>
   </footer>
+  <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+  <script>
+    hbspt.forms.create({
+      region: "eu1",
+      portalId: "24894273",
+      formId: "60faff65-f83f-4f6e-99c6-16bfbe83821d"
+    });
+  </script>
+
+  <script src="/src/scss/js/script.js"></script>
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
