--- a/about.html
+++ b/about.html
@@ -50,7 +50,8 @@
       <div class="container py-5">
         <div class="row h-100 align-items-center py-5">
           <div class="col-lg-6">
-            <h1 class="display-4">About Us</h1>
+            <h1 class="display-4 fw-bolder">Our story</h1>
+
             <p class="lead text-light mb-0">As an immigrant in Norway, I’ve found the process of applying for a job
               extremely frustrating. At one point, I was
               applying for 100 different positions. 90% of the times I never received a reply regarding the outcome of
@@ -80,9 +81,12 @@
       <div class="container my-3 py-5 text-center">
         <div class="row mb-5">
           <div class="col">
-            <h2>Meet our Team</h2>
+            <h2 class="fw-bolder">Meet the Team</h2>
             <p class="mt-3">
-              We are a team of 5 people that are members of the team that will play the game in the game
+              We are a team with a strong passion for diversity, equity and inclusion and experience in organizational
+              psychology,
+              product development and technology.
+
             </p>
 
           </div>
@@ -271,18 +275,32 @@
           <div class="border-top my-5"></div>
         </div>
         <div class="col-md-6">
-          <p><small> © 2019 All Rights Reserved.</small></p>
+          <p><small> © 2023
+              All Rights Reserved.</small></p>
         </div>
         <div class="col-md-6 text-md-right">
           <ul class="social list-unstyled">
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://www.facebook.com/propl.global"><i class="fa-brands fa-facebook"></i></a></li>
+
+            <li><a href="https://www.instagram.com/propl_global/"><i class="fa-brands fa-instagram"></i></a></li>
+
+            <li><a href="https://www.linkedin.com/company/propl-global/"><i class="fa-brands fa-linkedin"></i></a></li>
+
           </ul>
         </div>
       </div>
     </div>
   </footer>
+
+  <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+  <script>
+    hbspt.forms.create({
+      region: "eu1",
+      portalId: "24894273",
+      formId: "60faff65-f83f-4f6e-99c6-16bfbe83821d"
+    });
+  </script>
+
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
