Updated change in the homepage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About Us</a>
             <a class="nav-link" href="contact.html">Contact Us</a>
-            <a class="nav-link" href="#">Candidates <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
+            <a class="nav-link"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSfiQrIdk6pxSuNaPhqEYFucfeJOMjl--dxEf4Md7XwMv_7dsw/viewform">Candidates
+              <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
             <a class="nav-link me-5" href="#">Employers <i class="fa-regular fa-circle-user"></i> </a>
           </div>
         </div>
@@ -216,7 +218,8 @@
 
     <div class="div">
 
-      <a href="#" class="btn btn-primary subscribe-btn">Sign Up Now </a>
+      <a href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl" class="btn btn-primary subscribe-btn">Sign Up
+        Now </a>
     </div>
 
   </main>
@@ -258,7 +261,7 @@
           </ul>
         </div>
 
-        <div class="col-md-4 mb-4 mb-md-0">
+        <!-- <div class="col-md-4 mb-4 mb-md-0">
           <div class="intro">
             <h2 class="text-center newsletter">Subscribe to our Newsletter</h2>
             <p class="text-center">Monthly digest of what's new and exciting from us. </p>
@@ -267,9 +270,9 @@
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email">
             </div>
             <div class="form-group"><button class="btn btn-primary" type="button">Subscribe </button></div>
-          </form>
 
-        </div>
+          </form>
+        </div> -->
       </div>
       <div class="row align-items-center">
         <div class="col-12">
@@ -292,7 +295,7 @@
     </div>
   </footer>
   <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
-  
+
 
   <script src="/src/scss/js/script.js"></script>
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
