Updated change  home about contact pages

--- a/about.html
+++ b/about.html
@@ -230,23 +230,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md mb-4 mb-md-0">
-          <h3>Our visit location is:</h3>
+          <h3 class="fw-bold">Our address:</h3>
+
           <ul class="list-unstyled nav-links">
-            <li><a href="#">Propl AS
+            <li><a href="#" class="fw-bold">Propl AS
                 Gründergarasjen, OsloMet Pilestredet 52, 0167 Oslo</a></li>
 
           </ul>
         </div>
         <div class="col-md mb-4 mb-md-0">
-          <h3>About</h3>
+          <h3 class="fw-bold">About</h3>
           <ul class="list-unstyled nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="col-md mb-4 mb-md-0">
-          <h3>if you have any further questions, please Contact</h3>
+          <h3>For questions or inquiries, please contact</h3>
           <ul class="list-unstyled nav-links">
             <li><a href="#">hello@propl.net</a></li>
 
@@ -255,28 +256,20 @@
         <div class="col-md mb-4 mb-md-0">
           <h3>Legal</h3>
           <ul class="list-unstyled nav-links">
-            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Legality</a></li>
-            <li><a href="#">Author License</a></li>
+
           </ul>
         </div>
-        <div class="col-md-4 mb-4 mb-md-0">
-          <h3>Subscribe to our newsletter</h3>
-          <p class="mb-4">Monthly digest of what's new and exciting from us.</p>
-          <form action="#" class="subscribe">
-            <input type="text" class="form-control" placeholder="Enter your e-mail">
-            <input type="submit" class="btn btn-submit" value="Send">
-          </form>
-        </div>
+
+
       </div>
       <div class="row align-items-center">
         <div class="col-12">
           <div class="border-top my-5"></div>
         </div>
         <div class="col-md-6">
-          <p><small> © 2023
-              All Rights Reserved.</small></p>
+          <p><small> © 2023 All Rights Reserved.</small></p>
         </div>
         <div class="col-md-6 text-md-right">
           <ul class="social list-unstyled">
@@ -290,7 +283,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer>s
 
   <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
 
