--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
                 Employers Sign Up Now
               </a>
-              <a href="https://share.proto.io/YEUHOV/" class="btn btn-secondary shadow lift me-1">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSfiQrIdk6pxSuNaPhqEYFucfeJOMjl--dxEf4Md7XwMv_7dsw/viewform"
+                class="btn btn-secondary shadow lift me-1">
                 <i class="fa-solid fa-user-plus"></i> Candidates Click Here
 
               </a>
@@ -240,9 +241,9 @@
         <div class="col-md mb-4 mb-md-0">
           <h3 class="fw-bold">About</h3>
           <ul class="list-unstyled nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="col-md mb-4 mb-md-0">
@@ -261,18 +262,7 @@
           </ul>
         </div>
 
-        <!-- <div class="col-md-4 mb-4 mb-md-0">
-          <div class="intro">
-            <h2 class="text-center newsletter">Subscribe to our Newsletter</h2>
-            <p class="text-center">Monthly digest of what's new and exciting from us. </p>
-          </div>
-          <form class="form-inline" method="post">
-            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email">
-            </div>
-            <div class="form-group"><button class="btn btn-primary" type="button">Subscribe </button></div>
-
-          </form>
-        </div> -->
+       
       </div>
       <div class="row align-items-center">
         <div class="col-12">
