--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
 
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/finn-erik-solvang-a1839b54/">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
@@ -162,7 +162,7 @@
 
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/j-malte-runge-07b954199/">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
@@ -186,7 +186,7 @@
 
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/duy-trung/">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
@@ -211,7 +211,7 @@
 
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/maria-jennifer-milleza-7330a0156/">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
