--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link"
               href="https://docs.google.com/forms/d/e/1FAIpQLSfiQrIdk6pxSuNaPhqEYFucfeJOMjl--dxEf4Md7XwMv_7dsw/viewform">Candidates
               <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
-            <a class="nav-link me-5" href="#">Employers <i class="fa-regular fa-circle-user"></i> </a>
+            <a class="nav-link me-5" href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl">Employers <i class="fa-regular fa-circle-user"></i> </a>
           </div>
         </div>
       </div>
